--- a/src/main.scss
+++ b/src/main.scss
@@ -84,7 +84,10 @@ body {
       }
 
       &__list {
-        border: 2px solid #000;
+
+        ul {
+          border: 2px solid #000;
+        }
 
         .list-item {
           list-style: none;
