--- a/src/main.scss
+++ b/src/main.scss
@@ -31,10 +31,11 @@
 }
 
 @mixin textGradient {
-  background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);  
+  background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
@@ -51,6 +52,7 @@ body {
 .title {
   margin: 0 1rem 2rem 0;
   font-size: 3rem;
+
   @include textGradient();
 }
 
@@ -78,12 +80,14 @@ body {
   margin: auto auto;
   min-height: 100vh;
   padding: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
+  box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
+  background-image: linear-gradient(-225deg, #5d9fff 0%, #b8dcff 48%, #6bbbff 100%);
+
   .main-title {
     font-size: 4rem;
     font-weight: 700;
     line-height: 2;
+
     @include textGradient();
   }
 
@@ -95,7 +99,7 @@ body {
       margin-right: 5rem;
       width: 50%;
       background-color: var(--white);
-      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
       padding: 2rem;
 
       &__head {
@@ -110,7 +114,7 @@ body {
 
       &__list {
         ul {
-          box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;        
+          box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
         }
 
         .list-item {
@@ -137,7 +141,7 @@ body {
 
           input {
             width: 100%;
-            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            box-shadow: rgba(0, 0, 0, 0.4) 0 2px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -3px 0 inset;
             padding: 1rem 2rem;
             border: none;
 
@@ -155,7 +159,7 @@ body {
 
         .submit-btn {
           align-self: flex-end;
-          
+
           span {
             @include textGradient();
           }
